# the-saas-template

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .infisical.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  infisical-auth.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  deps.py  org_deps.py  router.py
backend/app/api/routes/: __init__.py
backend/app/api/routes/v1/: __init__.py  assets.py  jobs.py  memberships.py  organizations.py  stripe.py  users.py
backend/app/auth/: __init__.py  deps.py  jwks.py
backend/app/clients/: sqs.py
backend/app/cloudflare/: __init__.py  connectors.py
backend/app/constants/: __init__.py  tables.py
backend/app/database/: __init__.py  assets.py  client.py  handler.py  jobs.py  memberships.py  organizations.py  stripe_catalog_items.py  stripe_webhook_events.py  subscriptions.py  types_autogen.py  users.py
backend/app/stripe/: __init__.py  checkout.py  client.py  customers.py  display.py  portal.py  subscriptions.py  webhooks.py
backend/app/utils/: __init__.py  logger.py  slack.py
backend/scripts/: dummy_stripe_products.json  postprocess_db_types.py  seed_stripe_catalog.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260117144300_user_management_starter.sql  20260128170000_organizations_and_memberships.sql  20260128173000_signup_creates_org_and_membership.sql  20260129120000_prevent_last_owner_removal.sql  20260130120000_billing_and_subscriptions.sql  20260130123000_additional_data_jsonb.sql  20260130130000_stripe_webhook_events.sql  20260130143000_users_email_denorm_and_remove_website.sql  20260202183532_create_assets_table.sql  20260202190000_stripe_catalog_items.sql  20260203193000_organizations_billing_denorm.sql  20260210164958_create_jobs_table.sql  20260317000000_jobs_ensure_result_data.sql
backend/supabase/templates/: magic_link.html
backend/tests/integration/: conftest.py  test_api.py  test_org_memberships.py  test_supabase.py
backend/tests/unit/: test_auth_deps.py  test_database_handler.py  test_main.py  test_memberships_routes_last_owner.py  test_memberships_routes_permissions.py  test_org_deps.py
backend/tests/utils/: __init__.py  db_query_test_stub.py
engine/: .env.example  .envrc  .gitignore  Dockerfile.gateway  Makefile  README.md  pyproject.toml
engine/src/engine/gateway/: logging_setup.py  main.py
engine/src/engine/gateway/processors/: BaseWebhookProcessor.py  __init__.py  example_webhook_processor.py  example_webhook_processor_2.py  example_webhook_processor_3.py
engine/src/engine/shared/: api.py  config.py  schemas.py
engine/src/engine/worker/: main.py
(+72 files in other folders)
